@@ -22,7 +22,7 @@ $PMF_LANG['metaCharset'] = 'UTF-8';
 $PMF_LANG['metaLanguage'] = 'zh';
 $PMF_LANG['language'] = 'Chinese Simplified (UTF-8)';
 $PMF_LANG['dir'] = 'ltr';
-$PMF_LANG["nplurals"] = "1";
+$PMF_LANG['nplurals'] = '1';
 $PMF_LANG['msgCategory'] = '类别';
 $PMF_LANG['msgShowAllCategories'] = '所有类别';
 $PMF_LANG['msgSearch'] = '搜索';
@@ -32,7 +32,7 @@ $PMF_LANG['msgOpenQuestions'] = '待回答问题';
 $PMF_LANG['msgHelp'] = '帮助';
 $PMF_LANG['msgContact'] = '联系我们';
 $PMF_LANG['msgHome'] = '首页';
-$PMF_LANG['msgNews'] = ' 新闻';
+$PMF_LANG['msgNews'] = ' 公告';
 $PMF_LANG['msgUserOnline'] = '人在线';
 $PMF_LANG['msgBack2Home'] = '返回首页';
 $PMF_LANG['msgFullCategories'] = '所有问答类别';
@@ -46,8 +46,8 @@ $PMF_LANG['msgPages'] = '页';
 $PMF_LANG['msgPrevious'] = '前';
 $PMF_LANG['msgNext'] = '后';
 $PMF_LANG['msgCategoryUp'] = '上级类别';
-$PMF_LANG['msgLastUpdateArticle'] = '更新日期：';
-$PMF_LANG['msgAuthor'] = '作者：';
+$PMF_LANG['msgLastUpdateArticle'] = '更新时间：';
+$PMF_LANG['msgAuthor'] = '作者';
 $PMF_LANG['msgPrinterFriendly'] = '打印视图';
 $PMF_LANG['msgPrintArticle'] = '打印';
 $PMF_LANG['msgMakeXMLExport'] = '输出为XML文件';
@@ -135,8 +135,8 @@ $PMF_LANG['ad_menu_entry_aprove'] = '审核问答';
 $PMF_LANG['ad_menu_entry_edit'] = '问答管理';
 $PMF_LANG['ad_menu_categ_add'] = '添加类别';
 $PMF_LANG['ad_menu_categ_edit'] = '类别管理';
-$PMF_LANG['ad_menu_news_add'] = '添加新闻';
-$PMF_LANG['ad_menu_news_edit'] = '新闻管理';
+$PMF_LANG['ad_menu_news_add'] = '添加公告';
+$PMF_LANG['ad_menu_news_edit'] = '公告管理';
 $PMF_LANG['ad_menu_open'] = '编审待回答问题';
 $PMF_LANG['ad_menu_stat'] = '评分统计';
 $PMF_LANG['ad_menu_cookie'] = 'Cookies';
@@ -208,14 +208,14 @@ $PMF_LANG['ad_entry_del_2'] = '属于';
 $PMF_LANG['ad_entry_del_3'] = '删除该问题？';
 $PMF_LANG['ad_entry_delsuc'] = '问题被 <strong>成功</strong> 删除。';
 $PMF_LANG['ad_entry_delfail'] = '问题没有被 <strong>删除</strong>！';
-$PMF_LANG['ad_news_header'] = '新闻标题';
-$PMF_LANG['ad_news_text'] = '新闻内容';
+$PMF_LANG['ad_news_header'] = '公告标题';
+$PMF_LANG['ad_news_text'] = '公告内容';
 $PMF_LANG['ad_news_link_url'] = '相关链接: (<strong>请不要加http://前缀</strong>)!';
 $PMF_LANG['ad_news_link_title'] = '链接标题:';
 $PMF_LANG['ad_news_link_target'] = '链接目标';
 $PMF_LANG['ad_news_link_window'] = '在新窗口打开链接';
 $PMF_LANG['ad_news_link_faq'] = '此FAQ内部链接';
-$PMF_LANG['ad_news_add'] = '添加新闻';
+$PMF_LANG['ad_news_add'] = '添加公告';
 $PMF_LANG['ad_news_id'] = '#';
 $PMF_LANG['ad_news_headline'] = '标题';
 $PMF_LANG['ad_news_date'] = '日期';
@@ -223,12 +223,12 @@ $PMF_LANG['ad_news_action'] = '操作';
 $PMF_LANG['ad_news_update'] = '更新';
 $PMF_LANG['ad_news_delete'] = '删除';
 $PMF_LANG['ad_news_nodata'] = '数据库中没有找到相关数据';
-$PMF_LANG['ad_news_updatesuc'] = '新闻已经被更新.';
-$PMF_LANG['ad_news_del'] = '确认删除这条新闻?';
+$PMF_LANG['ad_news_updatesuc'] = '公告已经被更新.';
+$PMF_LANG['ad_news_del'] = '确认删除这条公告?';
 $PMF_LANG['ad_news_yesdelete'] = '是!';
 $PMF_LANG['ad_news_nodelete'] = '否!';
-$PMF_LANG['ad_news_delsuc'] = '该条新闻已被删除.';
-$PMF_LANG['ad_news_updatenews'] = '更新新闻';
+$PMF_LANG['ad_news_delsuc'] = '该条公告已被删除.';
+$PMF_LANG['ad_news_updatenews'] = '更新公告';
 $PMF_LANG['ad_categ_new'] = '添加新的类别';
 $PMF_LANG['ad_categ_catnum'] = '类别编号:';
 $PMF_LANG['ad_categ_subcatnum'] = '子类别编号:';
@@ -353,7 +353,7 @@ $PMF_LANG['ad_csv_backup'] = '备份';
 $PMF_LANG['ad_csv_rest'] = '备份恢复';
 $PMF_LANG['ad_menu_backup'] = '备份';
 $PMF_LANG['ad_logout'] = '注销成功';
-$PMF_LANG['ad_news_edit'] = '编辑新闻';
+$PMF_LANG['ad_news_edit'] = '编辑公告';
 $PMF_LANG['ad_cookie'] = 'Cookies';
 $PMF_LANG['ad_sess_head'] = '察看会话(Sessions)';
 $PMF_LANG['ad_kateg_add'] = '添加类别';
@@ -408,7 +408,7 @@ $PMF_LANG['ad_menu_export'] = '导出问答数据';
 $PMF_LANG['ad_export_1'] = '建立 RSS-Feed';
 $PMF_LANG['ad_export_2'] = '.';
 $PMF_LANG['ad_export_file'] = '错误: 不能写文件。';
-$PMF_LANG['ad_export_news'] = '新闻RSS-Feed';
+$PMF_LANG['ad_export_news'] = '公告RSS-Feed';
 $PMF_LANG['ad_export_topten'] = '10大热门RSS-Feed';
 $PMF_LANG['ad_export_latest'] = '5个最新RSS-Feed';
 $PMF_LANG['ad_export_pdf'] = '所有内容导出为PDF格式';
@@ -422,9 +422,9 @@ $PMF_LANG['rightsLanguage']['delbt'] = '删除问题';
 $PMF_LANG['rightsLanguage']['viewlog'] = '察看日志';
 $PMF_LANG['rightsLanguage']['adminlog'] = '察看操作日志';
 $PMF_LANG['rightsLanguage']['delcomment'] = '删除评论';
-$PMF_LANG['rightsLanguage']['addnews'] = '添加新闻';
-$PMF_LANG['rightsLanguage']['editnews'] = '编辑新闻';
-$PMF_LANG['rightsLanguage']['delnews'] = '删除新闻';
+$PMF_LANG['rightsLanguage']['addnews'] = '添加公告';
+$PMF_LANG['rightsLanguage']['editnews'] = '编辑公告';
+$PMF_LANG['rightsLanguage']['delnews'] = '删除公告';
 $PMF_LANG['rightsLanguage']['addcateg'] = '添加类别';
 $PMF_LANG['rightsLanguage']['editcateg'] = '编辑类别';
 $PMF_LANG['rightsLanguage']['delcateg'] = '删除类别';
@@ -588,11 +588,11 @@ $PMF_LANG['ad_news_from'] = '从：';
 $PMF_LANG['ad_news_to'] = '至：';
 $PMF_LANG['ad_news_insertfail'] = 'An error occurred inserting the news item into the database.';
 $PMF_LANG['ad_news_updatefail'] = 'An error occurred updating the news item into the database.';
-$PMF_LANG['newsShowCurrent'] = 'Show current news.';
-$PMF_LANG['newsShowArchive'] = 'Show archived news.';
-$PMF_LANG['newsArchive'] = ' News archive';
-$PMF_LANG['newsWriteComment'] = 'comment on this entry';
-$PMF_LANG['newsCommentDate'] = 'Added at: ';
+$PMF_LANG['newsShowCurrent'] = '查看最新公告';
+$PMF_LANG['newsShowArchive'] = '查看以往公告';
+$PMF_LANG['newsArchive'] = ' 以往公告';
+$PMF_LANG['newsWriteComment'] = '评论此公告';
+$PMF_LANG['newsCommentDate'] = '添加于： ';
 $PMF_LANG['ad_record_expiration_window'] = 'Record expiration time window (optional)';
 $PMF_LANG['admin_mainmenu_home'] = 'Dashboard';
 $PMF_LANG['admin_mainmenu_users'] = '用户';
@@ -608,8 +608,8 @@ $PMF_LANG['err_expiredArticle'] = 'This entry is expired and can not be displaye
 $PMF_LANG['err_expiredNews'] = 'This news is expired and can not be displayed';
 $PMF_LANG['err_inactiveNews'] = 'This news is in revision and can not be displayed';
 $PMF_LANG['msgSearchOnAllLanguages'] = 'Search over all languages:';
-$PMF_LANG['ad_entry_tags'] = 'Tags';
-$PMF_LANG['msg_tags'] = 'Tags';
+$PMF_LANG['ad_entry_tags'] = '标签';
+$PMF_LANG['msg_tags'] = '标签';
 $PMF_LANG['ad_linkcheck_feedback_url-batch1'] = '检查中……';
 $PMF_LANG['ad_linkcheck_feedback_url-batch2'] = '检查中……';
 $PMF_LANG['ad_linkcheck_feedback_url-batch3'] = '检查中……';
@@ -630,7 +630,7 @@ $PMF_LANG['ad_categ_transalready'] = 'Already translated in: ';
 $PMF_LANG['ad_categ_deletealllang'] = 'Delete in all languages?';
 $PMF_LANG['ad_categ_deletethislang'] = 'Delete in this language only?';
 $PMF_LANG['ad_categ_translated'] = 'The category has been translated.';
-$PMF_LANG['ad_categ_show'] = 'Overview';
+$PMF_LANG['ad_categ_show'] = '概览';
 $PMF_LANG['ad_menu_categ_structure'] = 'Category Overview including its languages';
 $PMF_LANG['ad_entry_userpermission'] = 'User permissions:';
 $PMF_LANG['ad_entry_grouppermission'] = 'Group permissions:';
@@ -639,9 +639,9 @@ $PMF_LANG['ad_entry_restricted_users'] = 'Restricted access to';
 $PMF_LANG['ad_entry_all_groups'] = 'Access for all groups';
 $PMF_LANG['ad_entry_restricted_groups'] = 'Restricted access to';
 $PMF_LANG['ad_session_expiration'] = 'Time to your session expiration';
-$PMF_LANG['ad_user_active'] = 'active';
-$PMF_LANG['ad_user_blocked'] = 'blocked';
-$PMF_LANG['ad_user_protected'] = 'protected';
+$PMF_LANG['ad_user_active'] = '激活';
+$PMF_LANG['ad_user_blocked'] = '阻止';
+$PMF_LANG['ad_user_protected'] = '保护';
 $PMF_LANG['ad_entry_intlink'] = 'Select a FAQ record to insert it as a link...';
 $PMF_LANG['ad_categ_paste2'] = 'Paste after';
 $PMF_LANG['ad_categ_remark_move'] = 'The exchange of 2 categories is only possible at the same level.';
@@ -652,10 +652,10 @@ $PMF_LANG['ad_adminlog_delete_success'] = 'Older logs successfully deleted.';
 $PMF_LANG['ad_adminlog_delete_failure'] = 'No logs deleted: an error occurred performing the request.';
 $PMF_LANG['opensearch_plugin_install'] = 'add search plugin';
 $PMF_LANG['ad_quicklinks'] = 'Quicklinks';
-$PMF_LANG['ad_quick_category'] = 'Add new category';
-$PMF_LANG['ad_quick_record'] = 'Add new FAQ record';
-$PMF_LANG['ad_quick_user'] = 'Add new user';
-$PMF_LANG['ad_quick_group'] = 'Add new group';
+$PMF_LANG['ad_quick_category'] = '添加分类';
+$PMF_LANG['ad_quick_record'] = '添加问答';
+$PMF_LANG['ad_quick_user'] = '添加用户';
+$PMF_LANG['ad_quick_group'] = '添加用户组';
 $PMF_LANG['msgNewTranslationHeader'] = 'Translation proposal';
 $PMF_LANG['msgNewTranslationAddon'] = 'Your proposal will not be published right away, but will be released by the administrator upon receipt. Required  fields are <strong>your Name</strong>, <strong>your email address</strong>, <strong>your headline translation</strong> and <strong>your faq translation</strong>. Please separate the keywords with space only.';
 $PMF_LANG['msgNewTransSourcePane'] = 'Source pane';
@@ -668,7 +668,7 @@ $PMF_LANG['msgTranslate'] = 'Propose a translation for';
 $PMF_LANG['msgTranslateSubmit'] = 'Start translation...';
 $PMF_LANG['msgNewTranslationThanks'] = 'Thank you for your translation proposal!';
 $PMF_LANG['ad_news_link_parent'] = 'Link opens in parent window';
-$PMF_LANG['ad_menu_comments'] = 'Comments';
+$PMF_LANG['ad_menu_comments'] = '评论';
 $PMF_LANG['ad_comment_administration'] = 'Comments administration';
 $PMF_LANG['ad_comment_faqs'] = 'Comments in FAQ records:';
 $PMF_LANG['ad_comment_news'] = 'Comments in News records:';
@@ -680,42 +680,42 @@ $PMF_LANG['ad_conf_order_datum'] = 'Date';
 $PMF_LANG['ad_conf_order_author'] = 'Author';
 $PMF_LANG['ad_conf_desc'] = '降序';
 $PMF_LANG['ad_conf_asc'] = '升序';
-$PMF_LANG['mainControlCenter'] = 'Main configuration';
+$PMF_LANG['mainControlCenter'] = '主要设置';
 $PMF_LANG['recordsControlCenter'] = 'FAQ records configuration';
-$PMF_LANG['msgInstantResponse'] = 'Instant Response';
+$PMF_LANG['msgInstantResponse'] = '快速搜索';
 $PMF_LANG['msgInstantResponseMaxRecords'] = '. Find below the first %d records.';
-$PMF_LANG['msgAllCatArticles'] = 'Records in this category';
+$PMF_LANG['msgAllCatArticles'] = '本分类其他问答';
 $PMF_LANG['msgDescriptionInstantResponse'] = '输入查询条件，相关结果会立即在下方显示。';
-$PMF_LANG['msgTagSearch'] = 'Tagged entries';
+$PMF_LANG['msgTagSearch'] = '标签搜索';
 $PMF_LANG['ad_pmf_info'] = 'phpMyFAQ 信息';
 $PMF_LANG['ad_online_info'] = '在线版本检查';
 $PMF_LANG['ad_system_info'] = '系统信息';
 $PMF_LANG['msgRegisterUser'] = 'Do you want to register?';
 $PMF_LANG['ad_user_loginname'] = 'Login name:';
 $PMF_LANG['errorRegistration'] = 'This field is required!';
-$PMF_LANG['submitRegister'] = 'Register';
+$PMF_LANG['submitRegister'] = '注册';
 $PMF_LANG['msgUserData'] = 'User information required for registration';
 $PMF_LANG['captchaError'] = 'Please enter the right captcha code!';
 $PMF_LANG['msgRegError'] = 'Following errors occured. Please correct them:';
 $PMF_LANG['successMessage'] = 'Your registration was successful. You will soon receive a confirmation mail with your login data!';
 $PMF_LANG['msgRegThankYou'] = 'Thank you for your registration';
 $PMF_LANG['emailRegSubject'] = '[%sitename%] Registration: new user';
-$PMF_LANG['msgMostPopularSearches'] = 'The most popular searches are:';
-$PMF_LANG['ad_menu_searchstats'] = 'Search Statistics';
-$PMF_LANG['ad_searchstats_search_term'] = 'Keyword';
+$PMF_LANG['msgMostPopularSearches'] = '热门搜索：';
+$PMF_LANG['ad_menu_searchstats'] = '搜索统计';
+$PMF_LANG['ad_searchstats_search_term'] = '关键词';
 $PMF_LANG['ad_searchstats_search_term_count'] = 'Count';
-$PMF_LANG['ad_searchstats_search_term_lang'] = 'Language';
-$PMF_LANG['ad_searchstats_search_term_percentage'] = 'Percentage';
+$PMF_LANG['ad_searchstats_search_term_lang'] = '语言';
+$PMF_LANG['ad_searchstats_search_term_percentage'] = '百分比';
 $PMF_LANG['ad_record_sticky'] = 'Sticky';
 $PMF_LANG['ad_entry_sticky'] = 'Sticky';
-$PMF_LANG['stickyRecordsHeader'] = 'Sticky FAQs';
-$PMF_LANG['ad_menu_stopwordsconfig'] = 'Stop Words';
-$PMF_LANG['ad_config_stopword_input'] = 'Add new stop word';
+$PMF_LANG['stickyRecordsHeader'] = '疑难问答';
+$PMF_LANG['ad_menu_stopwordsconfig'] = '禁用词';
+$PMF_LANG['ad_config_stopword_input'] = '添加禁用词';
 $PMF_LANG['msgSendMailDespiteEverything'] = 'No, there is still no adequate answer (will send the mail)';
 $PMF_LANG['msgSendMailIfNothingIsFound'] = 'Is the wanted answer listed in the results above?';
 $PMF_LANG['msgChooseLanguageToTranslate'] = 'Please choose the language for translation';
 $PMF_LANG['msgLangDirIsntWritable'] = 'Translations dir isn\'t writable';
-$PMF_LANG['ad_menu_translations'] = 'Interface Translation';
+$PMF_LANG['ad_menu_translations'] = '界面翻译';
 $PMF_LANG['ad_start_notactive'] = 'Waiting for activation';
 $PMF_LANG['msgTransToolAddNewTranslation'] = '添加翻译';
 $PMF_LANG['msgTransToolLanguage'] = '语言';
@@ -785,3 +785,44 @@ $LANG_CONF['records.defaultActivation'] = array(0 => "checkbox", 1 => "Activate 
 $LANG_CONF['records.defaultAllowComments'] = array(0 => "checkbox", 1 => "Allow comments for new records (default: disallowed)");
 $LANG_CONF['main.enableWysiwygEditor'] = array(0 => "checkbox", 1 => "Enable bundled WYSIWYG editor (default: enabled)");
 $LANG_CONF['main.attachmentsPath'] = array(0 => "input", 1 => "附件存储路径。<br /><small>相对路径表示根目录下的目录。</small>");
+$PMF_LANG['plmsgUserOnline']['0'] = '%d 用户在线';
+$PMF_LANG['msgTransToolRemove'] = '移除';
+$PMF_LANG['msgTransToolLanguageNumberOfPlurals'] = 'Number of plural forms';
+$PMF_LANG['msgTransToolLanguageOnePlural'] = 'This language has only one plural form';
+$PMF_LANG['msgTransToolLanguagePluralNotSet'] = 'Plural form support for language %s is disabled (nplurals not set)';
+$PMF_LANG['plmsgHomeArticlesOnline']['0'] = '共有 %d 个问答';
+$PMF_LANG['plmsgViews']['0'] = '%d 次点击';
+$PMF_LANG['plmsgGuestOnline']['0'] = ' :: %d 游客';
+$PMF_LANG['plmsgRegisteredOnline']['0'] = ' %d 注册用户';
+$PMF_LANG['plmsgSearchAmount']['0'] = '共有 %d 个搜索结果';
+$PMF_LANG['plmsgPagesTotal']['0'] = '第 %d 页';
+$PMF_LANG['plmsgVotes']['0'] = '%d Vote';
+$PMF_LANG['plmsgEntries']['0'] = '%d FAQ';
+$PMF_LANG['rightsLanguage']['addtranslation'] = 'add translation';
+$PMF_LANG['rightsLanguage']['edittranslation'] = 'edit translation';
+$PMF_LANG['rightsLanguage']['deltranslation'] = 'delete translation';
+$PMF_LANG['rightsLanguage']['approverec'] = 'approve records';
+$PMF_LANG['ad_menu_upgrade'] = '升级';
+$PMF_LANG['ad_you_shouldnt_update'] = 'You have the latest version of phpMyFAQ. You do not need to upgrade.';
+$PMF_LANG['msgSecureSwitch'] = 'Switch to secure mode to login!';
+$LANG_CONF['main.templateSet'] = array(0 => "选择", 1 => "选择使用的模板");
+$LANG_CONF['main.enableAttachmentEncryption'] = array(0 => "checkbox", 1 => "Enable attachment encryption <br><small>Ignored when attachments is disabled</small>");
+$LANG_CONF['main.defaultAttachmentEncKey'] = array(0 => "input", 1 => 'Default attachment encryption key <br><small>Ignored if attachment encryption is disabled</small><br><small><font color="red">WARNING: Do not change this once set and enabled file encryption!!!</font></small>');
+$LANG_CONF['main.useSslForLogins'] = array(0 => 'checkbox', 1 => "Only allow logins over secure connection? (default: disabled)");
+$PMF_LANG['msgTransToolNoteFileSaving'] = 'Please note that no files will we written until you click save button';
+$PMF_LANG['msgTransToolPageBufferRecorded'] = 'Page %d buffer recorded successfully';
+$PMF_LANG['msgTransToolErrorRecordingPageBuffer'] = 'Error recording page %d buffer';
+$PMF_LANG['msgTransToolRecordingPageBuffer'] = 'Recording page %d buffer';
+$PMF_LANG['ad_record_active'] = 'Active';
+$PMF_LANG['msgAttachmentInvalid'] = 'The attachment is invalid, please inform admin';
+$PMF_LANG['list_all_users'] = '列出所有用户';
+$PMF_LANG['main.orderingPopularFaqs.visits'] = '列出最热门的问答';
+$PMF_LANG['main.orderingPopularFaqs.voting'] = 'list most voted entries';
+$PMF_LANG['msgShowHelp'] = '请用英文句号隔开';
+$PMF_LANG['msgUpdateFaqDate'] = '更新';
+$PMF_LANG['msgKeepFaqDate'] = '保持';
+$PMF_LANG['msgEditFaqDat'] = '编辑';
+$LANG_CONF['main.numberSearchTerms'] = array(0 => 'input', 1 => 'Number of listed search terms');
+$LANG_CONF['main.orderingPopularFaqs'] = array(0 => "select", 1 => "Sorting of the top faq's");
+$LANG_CONF['main.optionalMailAddress'] = array(0 => 'checkbox', 1 => 'Mail address as mandatory field (default: deactivated)');
+$LANG_CONF['main.useAjaxSearchOnStartpage'] = array(0 => 'checkbox', 1 => 'Instant Response on startpage (default: deactivated)');
