@@ -6,7 +6,8 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.6.10 - 2010-10-
--
+- updated Chinese (Simplified) translation
+
 
 Version 2.6.9 - 2010-09-28
 - fixed XSS vulnerability (Yam Mesicka, Thorsten)
